refactor: exceptions